--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nmcbrown67.github.io/nanamcbrown/",
+  "homepage": "https://nmcbrown67.github.io/",
   "name": "schoolme",
   "version": "0.1.0",
   "private": true,
